# test-poetry

./: pyproject.toml
codigo/: file.txt  read_data.py
