[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["Cássio de Alcantara <alcantara.cassio@hotmail.com>"]
readme = "README.md"
packages = [{include = "test_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
